<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutActivity">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgAvatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="16dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_avt"
        app:shapeAppearanceOverlay="@style/CircleImageView" />

    <TextView
        android:id="@+id/txt_student_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_student_id"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_student_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_student_name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_student_email"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_student_class"
        android:textSize="18sp" />
</LinearLayout>